[project]
name = "uc-intg-channels"
version = "0.1.4"
description = "Unfolded Circle Integration for Channels"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

authors = [
    { name = "Jack Powell", email = "jackjpowell@gmail.com" }
]

urls.Homepage = "https://github.com/jackjpowell/uc-intg-channels"
urls.Repository = "https://github.com/jackjpowell/uc-intg-channels"

dependencies = [
    # Core dependencies
    "ucapi==0.5.2",
    "ucapi-framework==1.8.4",
    "pyee>=9.0",
    "aiohttp>=3.9",
    "zeroconf==0.148.0",
]
